# ccpairs

./: .travis.yml  ANNOUNCE  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac
doc/: ccpairs.texi
meta/scripts/: ccpairs.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccmemory.sh
src/: ccpairs-accessors.c  ccpairs-conditions.c  ccpairs-constructors.c  ccpairs-exception-handlers.c  ccpairs-init.c  ccpairs-inspection.c  ccpairs-internals.h  ccpairs-mapping.c  ccpairs-memory.c  ccpairs-version.c  ccpairs.h
tests/: accessors.c  cons.c  constructors.c  inspection.c  mapping.c  version.c
